# MetaProject

./: CMakeLists.txt  README.md
apps/appone/: CMakeLists.txt
apps/appone/src/: main.cpp
cmake/: create_app.cmake  create_library.cmake  create_test.cmake
libs/libone/: CMakeLists.txt
libs/libone/cmake/: Config.cmake.in
libs/libone/include/libone/: libone.hpp
libs/libone/src/: libone.cpp
libs/libone/test/: libone_test2.cpp
